fix overlap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -216,7 +216,6 @@ label {
     border: none;
     padding: 10%;
     width: 50%;
-    margin-top: -300px;
     margin-bottom: -200px;
 }
 
